tests/compilation_test_sources/missing_param.stderr
error: expected at least one trait name as an argument; none provided.
 --> $DIR/missing_param.rs:5:1
  |
5 | #[must_implement_trait]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
