tests/compilation_test_sources/missing_param.rs
use must_implement_trait::must_implement_trait;

fn main() {}

#[must_implement_trait]
struct MyStruct {
    value: i32
}